# echo-artistry

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  STYLEGUIDE.md
.github/workflows/: ci.yaml  release.yaml
docs/source/: conf.py  index.rst
docs/source/exceptions/: openai_exceptions.rst
docs/source/generators/: comic_image_generator.rst  comic_story_generator.rst  file_name_generator.rst
docs/source/services/: cost_management.rst  token_counter.rst  transcriber.rst
docs/source/utils/: helper.rst  openai_client.rst
echo_artistry/: __init__.py  main.py
echo_artistry/exceptions/: __init__.py  openai_exceptions.py
echo_artistry/generators/: __init__.py  comic_image_generator.py  comic_story_generator.py  file_name_generator.py
echo_artistry/services/: __init__.py  cost_management.py  token_counter.py  transcriber.py
echo_artistry/src/: __init__.py  comic_image_generator.py  comic_story_generator.py  cost_management.py  scene_description_generation.py  transcriber.py
echo_artistry/src/exceptions/: __init__.py  openai_exceptions.py
echo_artistry/src/utils/: __init__.py  cost_management.py  file_name_generator.py  openai_client.py  token_counter.py  utils.py
echo_artistry/utils/: __init__.py  helper.py  openai_client.py
workflows/: ci.yaml
